# docs/openapi.yaml
@@ -68,12 +68,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                some_field:
-                  type: string
-                another_field:
-                  type: string
+              $ref: '#/components/schemas/Location'
       responses:
         '201':
           description: Location created
@@ -97,15 +92,19 @@ paths:
       responses:
         '200':
           description: Successful response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Person'
     post:
       summary: Create Person
       requestBody:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                #... Need to define fields for the Person here
+              $ref: '#/components/schemas/Person'
       responses:
         '201':
           description: Person created
@@ -132,6 +131,35 @@ components:
           type: string
         name:
           type: string
+    
+    Person:
+      type: object
+      properties:
+        id:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+        email:
+          type: string
+        dob:
+          type: date
+    
+    Location:
+      type: object
+      properties:
+        id:
+          type: string
+        person_id:
+          type: integer
+        creation_time:
+          type: string
+        latitude:
+          type: float
+        longitude:
+          type: float
+
   parameters:
     StartDate:
       name: start_date
